--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,4 @@ lerna-debug.log*
 .env.local
 .env.development.local
 .env.test.local
-.env.production.local 
+.env.production.local package-lock.json
